2009-07-29  Ulrich Drepper  <drepper@redhat.com>

	* math/s_fma.c: Don't define alias if __fma is a macro.
	* math/s_fmaf.c: Likewise.
	* sysdeps/x86_64/multiarch/s_fma.c: New file.
	* sysdeps/x86_64/multiarch/s_fmaf.c: New file.
	Partially based on a patch by H.J. Lu <hongjiu.lu@intel.com>.

	* sysdeps/x86_64/multiarch/init-arch.h (__get_cpu_features): Declare.
	(HAS_POPCOUNT, HAS_SSE4_2): Add variants which work outside libc.
	New macro HAS_FMA.
	* sysdeps/x86_64/multiarch/init-arch.c (__get_cpu_features): New
	function.
	* include/libc-symbols.h (libm_ifunc): Define.
	* sysdeps/x86_64/multiarch/Versions: New file.

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Improve CFI.

2009-07-28  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/dl-trampoline.S: Properly restore AVX registers.

2009-07-29  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-runtime.c (_dl_fixup): Indicate before _dl_lookup_symbol_x
	call that registers used in calling conventions need to be preserved.
	* elf/dl-lookup.c (do_lookup_x): Use RTLD_*_FOREIGN_CALL macros
	to preserve register content if necessary.
	* sysdeps/x86_64/dl-trampoline.S (_dl_x86_64_save_sse): New function.
	(_dl_x86_64_restore_sse): New function.
	* sysdeps/x86_64/tst-xmmymm.sh: There is now one more function that
	is allowed to modify xmm/ymm registers.

	* stdio-common/scanf15.c: Undefine _LIBC.  We want to test from an
	application's perspective.
	* stdio-common/scanf17.c: Likewise.

2009-07-28  Ulrich Drepper  <drepper@redhat.com>

	* csu/libc-tls.c (__libc_setup_tls) [TLS_TCB_AT_TP]: Don't add TCB
	size to memsz.
	(init_static_tls) [TLS_TCB_AT_TP]: Add it to GL(dl_tls_static_size)
	here.
	* elf/dl-reloc.c (_dl_try_allocate_static_tls): Compute freebytes in
	two steps to catch bugs.

2009-07-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/tst-xmmymm.sh: Refine testing.  The script now
	determines which files are used in runtime lookups and only checks
	those for SSE use.