@@ -1,3 +1,8 @@
+2009-07-30  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/ia64/backtrace.c (backtrace_helper): Stop backtrace when
+	we make no more progress.
+
 2009-07-29  Ulrich Drepper  <drepper@redhat.com>
 
 	* math/s_fma.c: Don't define alias if __fma is a macro.
